# sycl-cuda-test

./: CMakeLists.txt  sycl-cuda-test.cc
